# liflig-cdk

./: .editorconfig  .eslintignore  .eslintrc  .gitignore  .tool-versions  .yamllint.yml  CODEOWNERS  CONTRIBUTING.md  Jenkinsfile  Makefile  README.md  biome.jsonc  cdk.context.json  cdk.json  eslint.config.mjs  jest.config.js  jest.config.mjs  lefthook.yml  mise.toml  package-lock.json  package.json  pyproject.toml  renovate.json  renovate.json5  ruff.toml  tsconfig.base.json  tsconfig.eslint.json  tsconfig.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  update-documentation.yml  update-snapshots.yml  validate-otel-config.yml
__snapshots__/app/: build-artifacts.metadata.json  build-artifacts.template.json  cdk-deploy-example.template.json  cdk-pipeline-cdk-source.metadata.json  (+11 more)
assets/: README.md
assets/slack-error-log-forwarding-handler-lambda/: pyproject.toml
examples/: README.md  app.ts  build-artifacts.ts  cdk-deploy-stack.ts  cdk-pipelines.ts  ecs-update-image-stack.ts  manual-stacks.txt  ssm-parameter-reader-stack.ts  webapp-stack.ts
scripts/: create-snapshots.sh  run_py_tests.sh  validate-otel-config.sh
src/: artifacts.ts  bastion-host.ts  cdk-deploy.ts  cross-region-ssm-parameter.ts  feature-flags.ts  force-exports.ts  hosted-zone-with-param.ts  index.ts  jenkinsfile-check-referenced-stacks.ts  liflig-platform.ts  snapshots.ts  ssm-parameter-backed-resource.ts  ssm-parameter-reader.ts  tags.ts  utils.ts  webapp-deploy-via-role.ts
test/: bastion-host.test.ts  incomplete.test.ts  jenkinsfile-check-referenced-stacks.test.ts
(+188 files in other folders)
